--- a/src/animations/box/index.html
+++ b/src/animations/box/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8" />
   </head>
   <body>
+    <canvas id="myCanvas"></canvas>
     <script type="module" src="./main.ts"></script>
   </body>
 </html>
