--- a/src/animations/material/index.html
+++ b/src/animations/material/index.html
@@ -2,7 +2,9 @@
   <head>
     <meta charset="UTF-8" />
   </head>
+
   <body>
+    <canvas id="myCanvas"></canvas>
     <script type="module" src="./main.ts"></script>
   </body>
 </html>
